--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -287,7 +287,7 @@ ul {
 .btn-block {
     width: 100%;
 }
-
+/* hehehehehehehehehehehehheheheheheheheheheheheheheheheheheheheheheheheheheheheheheheheheheheheheheh
 /* ===== SECTIONS ===== */
 .barangay-section,
 .track-section,
