UI color change for all dashboards

--- a/public/css/barangay/dashboard.css
+++ b/public/css/barangay/dashboard.css
@@ -32,8 +32,8 @@ body {
 }
 
 .tab-btn.active {
-    color: #0d47a1;
-    border-bottom-color: #0d47a1;
+    color: #CA6702;
+    border-bottom-color: #CA6702;
 }
 
 /* Modal System */
